<resources>
    <string name="app_name">SportManager</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_textView_username">Username</string>
    <string name="login_textView_password">Password</string>
    <string name="button_login">Login</string>
    <string name="button_register">Register</string>
    <string name="txtView_firstname">First Name</string>
    <string name="txtView_lastName">Last Name</string>
    <string name="textView_password">Password</string>
    <string name="txtView_email">Email</string>
    <string name="step">StepExercice</string>
    <string name="trainingProgram">Training Program</string>
    <string name="exercice">Exercice</string>
    <string name="session">Session</string>
    <string name="menu_step">Step</string>
    <string name="menu_exercice">Exercice</string>
    <string name="menu_session">Session</string>
    <string name="menu_trainingProgram">Training program</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="field_exercice_name">Name</string>
    <string name="field_exercice_description">Description</string>
    <string name="field_exercice_difficulty">Difficulty</string>
    <string name="btn_create">Create</string>
    <string name="program_detail_btn_steps">Steps</string>
    <string name="program_detail_btn_session">Sessions</string>
    <string name="session_create_field_name">Name</string>
    <string name="session_create_field_desc">Description</string>
    <string name="session_create_editText_order">Order</string>
    <string name="choose_file">Choose file</string>
    <string name="menu_myTrainingProgram">My trainings program</string>
    <string name="menu_profile">Profile</string>
    <string name="followedTrainingProgram">Followed training programs</string>
    <string name="menu_followed_trainingProgram">Followed training program</string>
    <string name="disconnect">Disconnect</string>
</resources>
