<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_trainingProgram"
            android:icon="@drawable/ic_menu_training_program"
            android:title="@string/menu_trainingProgram" />
        <item
            android:id="@+id/nav_myTrainingProgram"
            android:icon="@drawable/ic_menu_training_program"
            android:title="@string/menu_myTrainingProgram" />
        <item
            android:id="@+id/nav_followed_trainingProgram"
            android:icon="@drawable/ic_menu_training_program"
            android:title="@string/menu_followed_trainingProgram" />
        <item
            android:id="@+id/nav_session"
            android:icon="@drawable/ic_menu_session"
            android:title="@string/menu_session" />
        <item
            android:id="@+id/nav_exercice"
            android:icon="@drawable/ic_menu_exercice"
            android:title="@string/menu_exercice" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/menu_profile" />
        <item
            android:id="@+id/action_mobile_navigation_disconnect"
            android:icon="@android:drawable/btn_dialog"
            android:onClick="disconnect"
            android:title="@string/disconnect" />
    </group>

</menu>
