<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.sportmanager.Components.Fragments.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_trainingProgram"
        android:name="com.example.sportmanager.Components.Fragments.TrainingProgram.TrainingProgramFragment"
        android:label="@string/trainingProgram"
        tools:layout="@layout/fragment_training_program" />

    <fragment
        android:id="@+id/nav_myTrainingProgram"
        android:name="com.example.sportmanager.Components.Fragments.TrainingProgram.MyTrainingProgramFragment"
        android:label="@string/trainingProgram"
        tools:layout="@layout/fragment_training_program" />

    <fragment
        android:id="@+id/nav_session"
        android:name="com.example.sportmanager.Components.Fragments.session.SessionFragment"
        android:label="@string/session"
        tools:layout="@layout/fragment_session_list" />

    <fragment
        android:id="@+id/nav_exercice"
        android:name="com.example.sportmanager.Components.Fragments.exercice.ExerciceFragment"
        android:label="@string/exercice"
        tools:layout="@layout/fragment_exercice_list" />
</navigation>