<?xml version="1.0" encoding="utf-8"?>
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".Components.Fragments.TrainingProgram.TrainingProgramCreateFragment"
        xmlns:tools="http://schemas.android.com/tools">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:text="@string/field_exercice_name" />

            <EditText
                android:id="@+id/trainingProgramCreate_editText_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.8"
                android:ems="10"
                android:inputType="textPersonName" />

        </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.2"
            android:text="@string/field_exercice_description" />

        <EditText
            android:id="@+id/trainingProgramCreate_editText_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.8"
            android:autofillHints=""
            android:ems="10"
            android:gravity="start|top"
            android:inputType="textMultiLine" tools:targetApi="o" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView_rating"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/field_exercice_difficulty" />

        <RatingBar
            android:id="@+id/trainingProgramCreate_ratingBar_difficulty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <Button
        android:id="@+id/trainingProgramCreate_btn_create"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_create" />

</LinearLayout>